k8-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-hello-world-deployment
  labels:
    app: spring-hello-world-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-hello-world-pod
  template:
    metadata:
      labels:
        app: spring-hello-world-pod
    spec:
      containers:
        - name: spring-hello-world-container
          image: joshikeyur/spring-hello-world
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-hello-world-service
spec:
  selector:
    app: spring-hello-world-pod
  #type: LoadBalancer
  type: ClusterIP #Since we started using Ingress no need to expose this as a LoadBalancer s
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 9090
      #nodePort: 30002
